--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,6 @@
             <scope>test</scope>
         </dependency>
 
-
         <!-- Swagger -->
         <dependency>
             <groupId>io.springfox</groupId>
@@ -78,6 +77,18 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>2.4.5</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
